<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lmb.projet1application.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/couleur4"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/couleur4">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/miki" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/couleur4">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/a" />

            </LinearLayout>



        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center">


                <Button
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:background="@color/couleur1"
                    android:layout_weight="1"
                    android:text="@string/couleur1" />


                <Button
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:background="@color/couleur2"
                    android:layout_weight="1"
                    android:text="@string/couleur2"
                    android:layout_gravity="center"/>

                <Button
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:background="@color/couleur3"
                    android:layout_weight="1"
                    android:text="@string/couleur3"



                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bvalider"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:background="@color/couleur0"
                    android:gravity="center"
                    android:text="@string/valider">

                </Button>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
